--- a/na-frontend/index.html
+++ b/na-frontend/index.html
@@ -5,7 +5,9 @@
       <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     </head>
     <body>
-        <audio controls preload="true" autoplay src="http://localhost:4000/stream"></audio>
+        <div id="main">
+
+        </div>
         <script type="text/javascript" src="bundle.js"></script>
         <script type="text/javascript" src="http://localhost:8000/webpack-dev-server.js"></script>
     </body>
